k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-sender
  namespace: mail-sender
  labels:
    app: mail-sender
spec:
  type: ClusterIP
  selector:
    app: mail-sender
  ports:
    - name: http
      port: 80
      targetPort: http
